docs: added purpose of  in the Content Model definition

--- a/src/docs/5.35.x/headless-cms/extending/content-models-via-code.mdx
+++ b/src/docs/5.35.x/headless-cms/extending/content-models-via-code.mdx
@@ -536,6 +536,45 @@ Here are a couple of examples of specifying icons from solid, regular, and brand
 - `fab/aws`.
 - `fab/react`.
 
+### What Is the Purpose of `titleFieldId` in the Content Model Definition?
+
+The `titleFieldId` in a content model is used to specify which field should be used as the title for the entries of that content model. This is a `text` field that provides a human-readable summary of each entry.
+For example, in a blog post content model, you might have fields like `id`, `title`, `body`, `author`, etc. By setting `titleFieldId` to `title`, you're telling Webiny to use the `title` field as the display name for each blog post in the **admin interface** (content entry listing screen).
+Here's an example:
+
+```ts
+const myModel = new CmsModelPlugin({
+  modelId: "myModel",
+  fields: [
+    {
+      id: "id",
+      type: "number",
+      fieldId: "id",
+      label: "ID",
+      settings: {}
+    },
+    {
+      id: "title",
+      type: "text",
+      fieldId: "title",
+      label: "Title",
+      settings: {}
+    },
+    // other fields...
+  ],
+  layout: [],
+  group: {
+    id: "group",
+    name: "Group"
+  },
+  name: "My Model",
+  description: "",
+  titleFieldId: "title" // Here, 'title' field is used as the title for each entry
+});
+```
+
+In this example, the `title` field is used as the title for each entry of the `myModel` content model. This means that in the admin interface (content entry listing screen), the value of the `title` field will be used as the display name for each entry.
+
 ## Immutable Code Definitions
 
 You can do what ever you want with the models via code. For that reason, there are things you need to be really careful about. We cannot prevent you from changing anything, so you need to be watchful for these pitfalls.
