--- a/docs/release-notes/upgrade-webiny.mdx
+++ b/docs/release-notes/upgrade-webiny.mdx
@@ -53,9 +53,10 @@ Once that's done, you can deploy your project.
 
 ## FAQ
 
-### While upgrading, can I skip versions, for example from 5.5.0 to 5.10.0?
+### While upgrading, can I skip versions, for example from 5.30.0 to 5.35.0?
 
-You should never skip versions as each upgrade can contain additional manual steps that need to be taken. The steps will always be listed in upgrade guides.
+You should **never skip versions (major or minor)** as each upgrade can contain additional manual steps that need to be taken. The steps will always be listed in upgrade guides.  
+Please note that it's possible to skip only **patch versions**. For example, if you are currently on version `5.30.0` and wish to upgrade to version `5.32.0`. You can upgrade from `5.30.0` to `5.31.0` and then from `5.31.0` to `5.32.0` by skiping the patch versions within the `5.31.0` series, such as `5.31.1`, `5.31.2`, and `5.31.3`.
 
 ### Once upgraded, do we need to re-deploy the Webiny project in order to see the changes?
 
