chore: add FM bulk editing to changelog

--- a/src/docs/shared/release-notes/5.38.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.38.1/changelog.mdx
@@ -3,10 +3,12 @@ title: Webiny 5.38.1 Changelog
 description: See what's new in Webiny version 5.38.1.
 ---
 
+import fmBulkEdit from "./assets/fm-bulk-edit.png";
+
 <GithubRelease version={"5.38.1"} />
 
 <Alert type={"warning"} title={"SECURITY PATCH"}>
-  This is a low severity security patch release!
+  This release contains a low severity security patch!
 </Alert>
 
 ## `withoutAuthorization` Execution Context Scoping ([#3714](https://github.com/webiny/webiny-js/pull/3714))
@@ -28,7 +30,7 @@ From your system security standpoint, this is a low severity issue, because this
 
 The solution uses the [async context tracking](https://nodejs.org/api/async_context.html) feature of Nodejs. This makes it possible for us to track the state of authorization on the execution context level, and not the entire request. So now, even if one part of the code execution temporarily disables authorization, all parallel execution paths would still have the authorization enabled.
 
-## Remove Deprecated Methods
+### Removed Methods
 
 To make the patch described above work reliably, we had to finally remove methods `enableAuthorization()` and `disableAuthorization()` from the Security app. These methods have long been deprecated, since the introduction of `withoutAuthorization()` method, so this should not come as a surprise.
 
@@ -47,3 +49,25 @@ context.security.withoutAuthorization(() => {
   // Do something
 });
 ```
+
+## Bulk Edit File Manager Extension Fields ([#3715](https://github.com/webiny/webiny-js/pull/3715))
+
+If you are using [custom file fields](/docs/{version}/file-manager/extending/customize-file-fields) in the File Manager, you will now be able to bulk edit them, using this new early preview feature. To enable bulk editing of your custom file fields, you need to se a `bulkEdit: true` property:
+
+```ts
+modifier.addField({
+  id: "customLabel",
+  fieldId: "customLabel",
+  label: "Custom Label",
+  type: "text",
+  renderer: {
+    name: "text-input"
+  },
+  // Enable bulk editing of this field
+  bulkEdit: true
+});
+```
+
+Once you deploy your API, the File Manager will auto-detect your bulk-editable fields. Once you select multiple files, a new action will appear in the top toolbar, which will bring up the following dialog:
+
+<Image src={fmBulkEdit} title={"Bulk Edit Dialog"}/>
