feat: custom entry datetime input

--- a/src/docs/shared/release-notes/5.38.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.38.1/changelog.mdx
@@ -3,7 +3,11 @@ title: Webiny 5.38.1 Changelog
 description: See what's new in Webiny version 5.38.1.
 ---
 
+
+
+
 import fmBulkEdit from "./assets/fm-bulk-edit.png";
+import {Alert} from "@/components/Alert";
 
 <GithubRelease version={"5.38.1"} />
 
@@ -47,10 +51,35 @@ context.security.enableAuthorization();
 This same code will now look like this:
 
 ```ts New Usage
-context.security.withoutAuthorization(() => {
+context.security.withoutAuthorization(async() => {
   // Do something
 });
 ```
+
+## Headless CMS
+
+### Custom DateTime and Identity Input ([#3718](https://github.com/webiny/webiny-js/pull/3718))
+<Alert type="info">
+  This is an advanced feature, only available by directly calling the GraphQL API mutations, for users who want to import data from their existing system and retain the DateTime and Identity data. 
+</Alert>
+
+With this release, our users can set their own custom DateTime values to the `createdOn`, `savedOn` and `publishedOn` fields. If the values are not sent to the GraphQL API, the code falls back to the already existing functionality.
+
+They can also set their own custom Identity values to the `createdBy`, `modifiedBy` and `ownedBy` fields. If the values are not sent to the GraphQL API, the code falls back to the default functionality.
+
+Setting your own custom DateTime and Identity values can be done when **creating an entry**, **creating a new revision of the entry** or **updating the entry**.
+
+### Skipping the Update of `savedOn` and `publishedOn` Fields When Publishing an Entry ([#3718](https://github.com/webiny/webiny-js/pull/3718))
+
+<Alert type="info">
+  This is an advanced feature, only available by directly calling the GraphQL API mutations. 
+</Alert>
+
+With this release, our users can choose to skip the update of the `savedOn` and `publishedOn` fields when publishing an entry.
+This can be done by setting the `updateSavedOn` and `updatePublishedOn` argument to `false` when calling the `publish` mutation.
+
+By default, the system updates those fields when **publishing** an entry.
+
 
 ## File Manager
 
