feat: custom file datetime input

--- a/src/docs/shared/release-notes/5.38.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.38.1/changelog.mdx
@@ -6,6 +6,7 @@ description: See what's new in Webiny version 5.38.1.
 
 
 
+
 import fmBulkEdit from "./assets/fm-bulk-edit.png";
 import {Alert} from "@/components/Alert";
 
@@ -104,3 +105,16 @@ modifier.addField({
 Once you deploy your API, the File Manager will auto-detect your bulk-editable fields. Once you select multiple files, a new action will appear in the top toolbar, which will bring up the following dialog:
 
 <Image src={fmBulkEdit} title={"Bulk Edit Dialog"}/>
+
+### Custom DateTime and Identity Input ([#3718](https://github.com/webiny/webiny-js/pull/3718))
+
+<Alert type="info">
+  This is an advanced feature, only available by directly calling the GraphQL API mutations, for users who want to import data from their existing system and retain the DateTime and Identity data.
+</Alert>
+
+Because our File Manager is built on top the Headless CMS code, it also can use the same custom DateTime and Identity input functionality.
+
+The main difference here is that the File Manager does not have the `publishedOn` and `ownedBy` fields.
+The reason behind that is that the File Manager does not have the concept of revisions, so there is no need for the `publishedOn` and `ownedBy` fields.
+
+Basically, our users can now send their own `createdOn` and `savedOn` DateTime values, and their own `createdBy` and `modifiedBy` Identity values when **creating a file** or **updating the file**.
